<resources>
    <string name="app_name">스마트 식탁</string>

    <string name="cancel">취소</string>
    <string name="reset">초기화</string>
    <string name="confirm">확인</string>
    <string name="back">뒤로가기</string>
    <string name="temp_save">임시저장</string>

    <string name="google_admob_key">ca-app-pub-3145363349418895~7605231424</string>

    <string name="banner_admob_key">ca-app-pub-3145363349418895/7077896000</string>
    <string name="banner_admob_key2">ca-app-pub-3145363349418895/3553417729</string>

    <!-- 재료 관리 전면광고 -->
    <string name="ingredient_front_admob_key">ca-app-pub-3145363349418895/9999117904</string>

    <!-- 장바구니 전면광고 -->
    <string name="basket_front_admob_key">ca-app-pub-3145363349418895/5216668354</string>

    <!-- 레시피 전면광고 -->
    <string name="recipe_front_admob_key">ca-app-pub-3145363349418895/2990197283</string>

    <string name="google_admob_test_key">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_admob_key">ca-app-pub-3145363349418895/7871397997</string>

    <string name="recipe_type_1_000">전체</string>
    <string name="recipe_type_1_001">한식</string>
    <string name="recipe_type_1_002">일식</string>
    <string name="recipe_type_1_003">중식</string>
    <string name="recipe_type_1_004">분식</string>
    <string name="recipe_type_1_006">제과/제빵</string>
    <string name="recipe_type_1_007">양식</string>

    <!-- 레시피 작성 -->
    <string name="recipe_write_1_001">레시피 작성</string>

    <string name="recipe_dialog_1_001">작성중인 레피시가 있습니다.\n임시저장 하시겠습니까?</string>
    <string name="recipe_dialog_1_002">(텍스트만 임시저장됩니다)</string>
    <string name="recipe_dialog_1_003">임시저장한 내역이 있습니다.\n불러오시겠습니까?</string>

    <!-- 레시피 상세 -->
    <string name="recipe_detail_1_001">레시피 상세</string>
    <string name="recipe_detail_1_002">수정</string>
    <string name="recipe_detail_1_003">삭제</string>

    <!-- 레시피 수정-->
    <string name="recipe_update_1_001">레시피 수정</string>

    <!-- 장바구니 목록-->
    <string name="shopping_basket_list_1_001">장바구니</string>


    <!-- 장바구니 추가 -->
    <string name="shopping_dialog_1_001">장바구니 항목 추가</string>
    <string name="shopping_dialog_1_002">추가할 항목을 입력하세요.</string>
    <string name="shopping_dialog_1_003">선택하신 항목을 삭제하시겠습니까?</string>
    <string name="shopping_dialog_1_004">[ %1$s ]\n 삭제하시겠습니까?</string>
    [%1$s]
    <!--재료 목록  -->
    <string name="ingredients_1_001">식재료관리</string>

    <!-- 재료 등록-->
    <string name="ingredients_add_1_000">재료추가</string>
    <string name="ingredients_add_1_001">냉장</string>
    <string name="ingredients_add_1_002">냉동</string>
    <string name="ingredients_add_1_003">실온</string>
    <string name="ingredients_add_1_004">선택해주세요.</string>
    <string name="ingredients_add_1_005">재료명을 입력 후 검색해주세요.</string>
    <string name="ingredients_add_1_006">추가</string>
    <string name="ingredients_add_1_007">냉장/냉동/실온 탭</string>

    <!-- 재료 수정 -->
    <string name="ingredients_update_1_000">재료관리</string>
    <string name="ingredients_update_1_001">수정</string>
    <string name="ingredients_update_1_002">삭제</string>
    <string name="ingredients_update_1_003">[%1$s]</string>

    <!-- 재료 검색 -->
    <string name="ingredients_search_1_000">식재료검색</string>

    <string name="etc_1_001">카메라 촬영</string>
    <string name="etc_1_002">앨범 선택</string>
    <string name="etc_1_003">네이버</string>
    <string name="etc_1_004">만개의레시피</string>
    <string name="etc_1_005">유튜브</string>


    <string name="setting_1_001">설정</string>

    <string name="data_reset_dialog_1_001">작성하였던 재료, 레시피,\n 장바구니 데이터가 모두 초기화됩니다.\n진행하시겠습니까?</string>

    <string name="storage_permission_rationale_title">title</string>
    <string name="storage_permission_rationale_message">message</string>
    <string name="storage_permission_denied_message">deny</string>



    <!--Chat GPT 추천 네이밍
    1. 키친메이트
    2. 레서피세이지
    3. 프리지마스터
    4. 쿡북키퍼
    5. 팬트리팜
    6. 밀매직
    7. 스마트키친
    8. 테이스티트래커
    9. 인그리디언트지니어스
    -->
</resources>