<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#000"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBody"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/bg_f5f3fa"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/layoutButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textMessage"
            android:textSize="20sp"
            android:textColor="@color/text_black"
            android:gravity="center_horizontal"
            tools:text="@string/recipe_dialog_1_001"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/base_hint"
        app:layout_constraintBottom_toTopOf="@id/layoutButton"/>

    <!-- 이전 다음 -->
    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/text_white"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/textNegative"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/base_hint"
            android:background="@drawable/button_bg_gray"
            android:text="@string/cancel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/textPositive"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg_blue"
            android:text="@string/confirm"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>