<?xml version="1.0" encoding="utf-8"?><!--
    ~ Copyright (C) 2019 The Android Open Source Project
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~      http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
    -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.psm.mytable.type.RecipeSearchType" />

        <variable
            name="viewmodel"
            type="com.psm.mytable.ui.ingredients.ingredientUpdate.IngredientsUpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_toolbar_close" />

        <View
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/base_hint"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- 재료명 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="*재료명"
                        android:textColor="@color/base_text"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ingredientNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                        android:hint="돼지고기"
                        android:maxLength="20"
                        android:paddingStart="10dp"
                        android:text="@={viewmodel.ingredientsData.ingredientName}"
                        android:textSize="15sp" />

                    <!-- 개수 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="*개수"
                        android:textColor="@color/base_text"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                        android:hint="ex) 1개, 100g, 500L"
                        android:maxLength="20"
                        android:paddingStart="10dp"
                        android:text="@={viewmodel.ingredientsData.ingredientCount}"
                        android:textSize="15sp" />

                    <!-- 보관방법 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="*보관방법"
                        android:textColor="@color/base_text"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rgStorage"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:checkedButton="@={viewmodel.ingredientsData.checkedStorage}"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdoCold"
                            style="@style/SegmentRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/bg_radio_segment"
                            android:text="@string/ingredients_add_1_001" />

                        <RadioButton
                            android:id="@+id/rdoFrozen"
                            style="@style/SegmentRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_radio_segment"
                            android:text="@string/ingredients_add_1_002" />

                        <RadioButton
                            android:id="@+id/rdoRoomTemperature"
                            style="@style/SegmentRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/bg_radio_segment"
                            android:text="@string/ingredients_add_1_003"
                            tools:checked="true" />
                    </RadioGroup>

                    <!-- 유통(소비)기한 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="*유통(소비)기한"
                        android:textColor="@color/base_text"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CommonEditText44"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                        android:drawableEnd="@drawable/ic_calendar_24"
                        android:gravity="center_vertical"
                        android:hint="@string/ingredients_add_1_004"
                        android:onClick="@{() -> viewmodel.clickSelectExpirationDate()}"
                        android:text="@={viewmodel.ingredientsData.expirationDate}"
                        android:textColor="@color/base_text"
                        tools:text="2023-08-31" />

                    <!-- 유통(소비)기한 검색 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CommonEditText44"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:drawableEnd="@drawable/ic_search_24_main_color"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> viewmodel.expirationDateSearchClick()}"
                        android:text="유통(소비)기한 검색"
                        android:textColor="@color/base_hint" />

                    <!-- 메모 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="메모"
                        android:textColor="@color/base_text"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/memoEdit"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                        android:gravity="top"
                        android:hint="ex) 제육볶음 재료"
                        android:maxLength="100"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@={viewmodel.ingredientsData.memo}"
                        android:textSize="15sp" />

                    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/adView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        ads:adSize="SMART_BANNER"
                        ads:adUnitId="@string/banner_admob_key2" />

                    <!-- 레시피 검색 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="레시피 검색"
                        android:textColor="@color/base_text"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">
                        <!-- 네이버 -->
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                            android:gravity="center"
                            android:onClick="@{() -> viewmodel.recipeSearchClick(RecipeSearchType.NAVER)}"
                            android:text="네이버"
                            android:textColor="@color/base_hint" />

                        <!-- 만개의 레피시 -->
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                            android:gravity="center"
                            android:onClick="@{() -> viewmodel.recipeSearchClick(RecipeSearchType.MANGAE)}"
                            android:text="만개의레시피"
                            android:textColor="@color/base_hint" />

                        <!-- 유튜브 -->
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_round4_rect_stroke_solid_white2"
                            android:gravity="center"
                            android:onClick="@{() -> viewmodel.recipeSearchClick(RecipeSearchType.YOUTUBE)}"
                            android:text="유튜브"
                            android:textColor="@color/base_hint" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/deleteBtn"
                            style="@style/NegativeButton"
                            android:layout_weight="1"
                            android:onClick="@{() -> viewmodel.clickDelete(viewmodel.ingredientsData)}"
                            android:text="@string/ingredients_update_1_002"
                            tools:enabled="true" />

                        <TextView
                            android:id="@+id/addBtn"
                            style="@style/PositiveButton"
                            android:layout_marginStart="6dp"
                            android:layout_weight="1"
                            android:enabled="@{viewmodel.ingredientsData.requiredDataComplete}"
                            android:onClick="@{() -> viewmodel.clickNext()}"
                            android:text="@string/ingredients_update_1_001"
                            tools:enabled="true" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/text_blue2"
            android:visibility="@{viewmodel.progressVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>