<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,LabelFor,TextFields,Autofill,TooManyViews"
    tools:targetApi="o">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.psm.mytable.ui.ingredients.IngredientsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--<include layout="@layout/layout_toolbar_back" />-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/toolbarLinear"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:gravity="start|center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/menuBtn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_menu" />

                    <TextView
                        android:id="@+id/textToolbarTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="화면명" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/imgSearch"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="1dp"
                        android:src="@drawable/ic_search_24_main_color"
                        android:onClick="@{() -> viewmodel.clickIngredientSearch()}"
                        android:visibility="visible"
                        tools:visibility="visible" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/guideline1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/base_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbarLinear"
                    app:layout_constraintBottom_toTopOf="@id/tabLayout"/>
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:contentDescription="@string/ingredients_add_1_007"
                    android:background="@drawable/rectangle_underline_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline1"
                    app:tabGravity="fill"
                    app:tabIndicatorHeight="2dp"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorColor="@color/main_color"
                    app:tabSelectedTextColor="@color/main_dark_color" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/main_color"
                    android:onClick="@{() -> viewmodel.clickIngredientAdd()}"
                    android:scaleType="center"
                    android:src="@drawable/ic_add_48"
                    android:contentDescription="@string/ingredients_add_1_000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:maxImageSize="35dp"
                    app:tint="@null" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/text_blue2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/navigationView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:headerLayout="@layout/main_naviheader"
                app:menu="@menu/main_navigationmenu" />
        </androidx.drawerlayout.widget.DrawerLayout>
    </FrameLayout>
</layout>
